--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "grunt": "^0.4.5",
     "grunt-contrib-requirejs": "^0.4.4",
     "load-grunt-tasks": "^0.6.0"
+  },
+  "devDependencies": {
+    "grunt-ts": "^1.12.0"
   }
 }
