--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
   },
   "author": "",
   "license": "MIT",
-  "dependencies": {
-    "grunt": "^0.4.5",
-    "grunt-contrib-requirejs": "^0.4.4",
-    "load-grunt-tasks": "^0.6.0"
-  },
   "devDependencies": {
-    "grunt-ts": "^1.12.0"
+    "grunt": "^0.4.5",
+    "grunt-bower-task": "^0.4.0",
+    "grunt-contrib-copy": "^0.6.0",
+    "grunt-contrib-requirejs": "^0.4.4",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-ejs": "^0.2.0",
+    "grunt-ts": "^1.12.0",
+    "load-grunt-tasks": "^0.6.0"
   }
 }
