--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
     "grunt": "^0.4.5",
     "grunt-bower-task": "^0.4.0",
     "grunt-contrib-copy": "^0.6.0",
+    "grunt-contrib-jasmine": "~0.8.0",
     "grunt-contrib-requirejs": "^0.4.4",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-ejs": "^0.2.0",
+    "grunt-template-jasmine-requirejs": "^0.2.0",
     "grunt-ts": "^1.12.0",
+    "jasmine": "~2.0.1",
     "load-grunt-tasks": "^0.6.0",
     "mocha": "~1.21.4",
-    "squire": "~1.1.8",
-    "jasmine": "~2.0.1",
-    "grunt-contrib-jasmine": "~0.8.0"
+    "squire": "~1.1.8"
   }
 }
